--- a/src/public/assets/scss/components/home.scss
+++ b/src/public/assets/scss/components/home.scss
@@ -3,6 +3,7 @@
 #header {
   height: 100px;
   background-color: $lightgrey;
+  background: url(../../images/bg.jpg) center center no-repeat;
 }
 
 #footer {
