--- a/src/public/assets/scss/components/home.scss
+++ b/src/public/assets/scss/components/home.scss
@@ -3,10 +3,9 @@
 #header {
   height: 100px;
   background-color: $lightgrey;
-  background: url(../../images/bg.jpg) center center no-repeat;
 }
 
 #footer {
   height: 100px;
-  background-color: $grey;
+  background: url(../../images/bg.jpg) center center repeat;
 }
